--- a/02-10-2019/package.json
+++ b/02-10-2019/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/BTS-Interns-2019/internship_nodeJS#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1"
   }
