--- a/puppies4life/package.json
+++ b/puppies4life/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/BTS-Interns-2019/internship_nodeJS#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1"
   },
@@ -25,5 +26,6 @@
     "eslint": "^6.5.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2"
-  }
+  },
+  "keywords": []
 }
