--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,9 @@ typings/
 
 # dotenv environment variables file
 .env
+.env.testing
+.env.production
+.env.default
 
 # next.js build output
 .next
