adding config for the app port

--- a/.env.default.example
+++ b/.env.default.example
@@ -3,3 +3,6 @@ DB_HOST= Database host
 DB_USER= Database user to use
 DB_PASSSWORD= Database user password
 DB_NAME= Database to use
+
+# API config
+APP_PORT= Port to expose the API
