--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "football-project",
+  "name": "footballproject",
   "version": "1.0.0",
-  "description": "Back-end portion for the Football project",
+  "description": "This is the Back-end portion of the football web application.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/BTS-Interns-2019/internship_nodeJS.git"
   },
-  "author": "Hector Soto, Miguel Vivanco, Cristian Plascencia, Erick Bardo",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/BTS-Interns-2019/internship_nodeJS/issues"
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jwt-simple": "^0.5.6",
     "mysql": "^2.17.1"
   }
 }
