--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/BTS-Interns-2019/internship_nodeJS.git"
   },
-  "author": "",
+  "author": "Hector Soto, Cristian Plascencia, Miguel Vivanco, Erick Bardo",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/BTS-Interns-2019/internship_nodeJS/issues"
@@ -22,6 +22,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jwt-simple": "^0.5.6",
+    "log4js": "^5.1.0",
     "mysql": "^2.17.1"
   }
 }
