--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^4.0.0",
     "express": "^4.17.1",
     "http-errors": "^1.7.3",
     "http-status": "^1.3.2",
+    "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "log4js": "^5.1.0",
     "mysql": "^2.17.1",
