--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "dotenv": "^4.0.0",
     "express": "^4.17.1",
     "http-errors": "^1.7.3",
@@ -24,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "log4js": "^5.1.0",
+    "mocha": "^6.2.1",
     "mysql": "^2.17.1",
     "path": "^0.12.7"
   }
