--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "ajv": "^6.10.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jwt-simple": "^0.5.6",
