--- a/futbol-2/package.json
+++ b/futbol-2/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "http-errors": "^1.7.3",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^5.1.0",
     "mysql": "^2.17.1"
