--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "log4js": "^5.1.0",
     "mocha": "^6.2.1",
     "mysql": "^2.17.1",
+    "node-gyp": "^6.0.0",
     "path": "^0.12.7"
   },
   "bugs": {
