--- a/futbol-2/package.json
+++ b/futbol-2/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "http-errors": "^1.7.3",
+    "jsonschema": "^1.2.4",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^5.1.0",
     "mysql": "^2.17.1"
