--- a/dog-adoptions/.env.default
+++ b/dog-adoptions/.env.default
@@ -1,5 +1,5 @@
 DB_HOST = localhost
-DB_PORT = 3306
-DB_USER = root
-DB_PASSWORD = password
-DB_NAME = adoption_db
+DB_PORT = 3307
+DB_USER = foo
+DB_PASSWORD = bar
+DB_NAME = node
