--- a/dog-adoptions-scaffolding/package.json
+++ b/dog-adoptions-scaffolding/package.json
@@ -21,8 +21,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "log4js": "^5.1.0",
-    "mysql": "^2.17.1",
-    "path": "^0.12.7"
+    "log4js": "^5.2.0",
+    "mysql": "^2.17.1"
   }
 }
