--- a/futbol-2/.env.default
+++ b/futbol-2/.env.default
@@ -1,7 +1,7 @@
 # Database config
   DB_HOST = localhost
   DB_USER = root
-  DB_PASSWORD = 
+  DB_PASSWORD = 'Savant32'
   DB_NAME = futbol 
   DB_PORT = 3307
 
